@@ -59,4 +59,5 @@
       - Removed: imperfect splitting of address to street and house number
       - Added: order is processed correctly when using legacy widget v5
       - Removed: unused fragments of code
+      - Fixed: notice during order state update
       - Added: showing carrier extra content for (probably broken) third party templates
